IndexedDB: Align abort behavior on uncaught exception with Gecko

Indexed DB specifies that an uncaught exception in an event handler
should abort the transaction. The spec states that this should happen
after dispatch, and Gecko agrees. Blink was aborting after the
specific handler aborted.

This change aligns Blink's behavior with Gecko and the spec, and
adds test coverage to web-platform-tests.

BUG=698342
R=pwnall@chromium.org

Review-Url: https://codereview.chromium.org/2734533002
Cr-Commit-Position: refs/heads/master@{#454937}

Former-commit-id: ed3d60a6f09642595391b6678d46f548b649e832